CrOS Shelf: Don't show delayed tooltips after mouseout event

This prevents the behavior whereby the user would mouse over a shelf
item, then mouse out before the tooltip had appeared, and the tooltip
would still unexpectedly appear.

Bug: 883534
Change-Id: I8ec069d392c08a00003ba380d8aa0ee1a3c7ec8f
Reviewed-on: https://chromium-review.googlesource.com/1226432
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591716}
Former-commit-id: b7da1a4e6d4ec2ec10c58a50a90ba14fe7c7a828